Fix formatting and scrollbar issue

--- a/tigerapps/wintersession/static/wintersession/courses.scss
+++ b/tigerapps/wintersession/static/wintersession/courses.scss
@@ -5,7 +5,7 @@ $card-border-radius: 3px;
 #main-wrap {
   position: absolute;
   top: 171px;
-  bottom: 0;
+  bottom: 1px;
   background-color: white;
 
   .container {
